infra/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: REPLACE
spec:
  replicas: 3
  selector:
    matchLabels:
      app: koronet-webserver
  template:
    metadata:
      labels:
        app: koronet-webserver
    spec:
      containers:
      - name: koronet-webserver
        image: koronet-webserver:BUILD_NUMBER_PLACEHOLDER
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
