infra/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: REPLACE
spec:
  selector:
    app: koronet
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
