infra/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: REPLACE
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: replace.host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: koronet-app
            port:
              number: 80
